--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -145,11 +145,13 @@ pipelines:
             - name: {{ .Values.PropertyBagMvn }}
         execution:
           onExecute:
-      #       - sudo mkdir -p /etc/docker 
-      #       - > 
-      #         sudo jq -n  "{\"insecure-registries\": [\"${envVarDockerRepoUrl}\"]}" > /etc/docker/daemon.json
-      #       - sudo systemctl restart docker
-      #       - sudo cat /etc/docker/daemon.json
+          {{- if .Values.OCIPipeline }}
+            - sudo mkdir -p /etc/docker 
+            - > 
+              sudo jq -n  "{\"insecure-registries\": [\"${envVarDockerRepoUrl}\"]}" > /etc/docker/daemon.json
+            - sudo systemctl restart docker
+            - sudo cat /etc/docker/daemon.json
+          {{- end }}
             - add_run_variables runVarAppVersion=${res_{{ .Values.PropertyBagMvn }}_appVersion}
             - add_run_variables runVarAppCommitSHA=${res_{{ .Values.PropertyBagMvn }}_appCommitSHA}
             - add_run_variables runVarBINumber=${res_{{ .Values.PropertyBagMvn }}_biNumber}
