--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -155,6 +155,8 @@ pipelines:
             - add_run_variables runVarAppVersion=${res_{{ .Values.PropertyBagMvn }}_appVersion}
             - add_run_variables runVarAppCommitSHA=${res_{{ .Values.PropertyBagMvn }}_appCommitSHA}
             - add_run_variables runVarBINumber=${res_{{ .Values.PropertyBagMvn }}_biNumber}
+     
+    {{- if .Values.OCIPipeline }}
       - name: {{ .Values.OCIBuild.stepName | default "backapp_mvn_oci" }} 
         type: oci/PodmanBuild
         configuration:
@@ -213,44 +215,47 @@ pipelines:
         execution:  
           onSuccess:
             - write_output {{ .Values.PropertyBagContainer }} newTag=${runVarAppVersion}
+    {{- else }}
+      - name: build_backapp_mvn_docker
+        type: DockerBuild
+        configuration:
+          affinityGroup: together
+          dockerFileName: Dockerfile
+          dockerFileLocation: complete/CI/Docker/
+          dockerImageName: ${envVarDockerImageName}
+          dockerImageTag: '${runVarAppVersion}'
+          dockerOptions: --build-arg JFROG_CLI_BUILD_URL=${int_artifactory_eu_url/%artifactory/ui}/pipelines/myPipelines/${pipeline_name}/${run_number}/build_${pipeline_name}?branch=jfrog-ode
+          inputSteps:
+            - name: setup_env
+          inputResources:
+            - name: src_dockerfile_backapp_mvn
+            - name: fs_backapp_mvn
+          integrations:
+            - name: artifactory_eu
+        execution:
+          onStart:
+            - ls -la ${res_fs_backapp_mvn_resourcePath}
+            - echo ${res_src_dockerfile_backapp_mvn_resourcePath}
+            - ls -la  ${res_src_dockerfile_backapp_mvn_resourcePath}
+            - cp ${res_fs_backapp_mvn_resourcePath}/multi-module-application-${runVarAppVersion}.jar ${res_src_dockerfile_backapp_mvn_resourcePath}/complete/CI/Docker/multi-module-application.jar
+            - ls -la ${res_src_dockerfile_backapp_mvn_resourcePath}/complete/CI/Docker/
+            - add_run_variables runVarGitCommit=${res_src_dockerfile_backapp_mvn_commitSha}
+      - name: publish_backapp_mvn_docker
+        type: DockerPush
+        configuration:
+          affinityGroup: together
+          targetRepository: ${envVarDockerPushRepo}
+          autoPublishBuildInfo: true
+          inputSteps:
+            - name: build_backapp_mvn_docker
+          integrations:
+            - name: artifactory_eu
+          outputResources:
+            - name: bi_backapp_mvn_docker
+        execution:
+          onSuccess:
+            - echo "${envVarDockerPushRepo}/backapp-mvn/${runVarAppVersion}/manifest.json"
+            - jfrog rt sp --build=${res_bi_backapp_mvn_docker_buildName}/${run_number} ${envVarDockerPushRepo}/backapp-mvn/${runVarAppVersion}/manifest.json "app.version=${runVarAppVersion};app.commit.sha=${runVarAppCommitSHA};dockerfile.commit.sha=${runVarGitCommit}"
 
-      # - name: build_backapp_mvn_docker
-      #   type: DockerBuild
-      #   configuration:
-      #     affinityGroup: together
-      #     dockerFileName: Dockerfile
-      #     dockerFileLocation: complete/CI/Docker/
-      #     dockerImageName: ${envVarDockerImageName}
-      #     dockerImageTag: '${runVarAppVersion}'
-      #     dockerOptions: --build-arg JFROG_CLI_BUILD_URL=${int_artifactory_eu_url/%artifactory/ui}/pipelines/myPipelines/${pipeline_name}/${run_number}/build_${pipeline_name}?branch=jfrog-ode
-      #     inputSteps:
-      #       - name: setup_env
-      #     inputResources:
-      #       - name: src_dockerfile_backapp_mvn
-      #       - name: fs_backapp_mvn
-      #     integrations:
-      #       - name: artifactory_eu
-      #   execution:
-      #     onStart:
-      #       - ls -la ${res_fs_backapp_mvn_resourcePath}
-      #       - echo ${res_src_dockerfile_backapp_mvn_resourcePath}
-      #       - ls -la  ${res_src_dockerfile_backapp_mvn_resourcePath}
-      #       - cp ${res_fs_backapp_mvn_resourcePath}/multi-module-application-${runVarAppVersion}.jar ${res_src_dockerfile_backapp_mvn_resourcePath}/complete/CI/Docker/multi-module-application.jar
-      #       - ls -la ${res_src_dockerfile_backapp_mvn_resourcePath}/complete/CI/Docker/
-      #       - add_run_variables runVarGitCommit=${res_src_dockerfile_backapp_mvn_commitSha}
-      # - name: publish_backapp_mvn_docker
-        # type: DockerPush
-        # configuration:
-        #   affinityGroup: together
-        #   targetRepository: ${envVarDockerPushRepo}
-        #   autoPublishBuildInfo: true
-        #   inputSteps:
-        #     - name: build_backapp_mvn_docker
-        #   integrations:
-        #     - name: artifactory_eu
-        #   outputResources:
-        #     - name: bi_backapp_mvn_docker
-        # execution:
-        #   onSuccess:
-        #     - echo "${envVarDockerPushRepo}/backapp-mvn/${runVarAppVersion}/manifest.json"
-        #     - jfrog rt sp --build=${res_bi_backapp_mvn_docker_buildName}/${run_number} ${envVarDockerPushRepo}/backapp-mvn/${runVarAppVersion}/manifest.json "app.version=${runVarAppVersion};app.commit.sha=${runVarAppCommitSHA};dockerfile.commit.sha=${runVarGitCommit}"
+    {{- end }}
+
