--- a/templates/yann/maven/values.yml.example
+++ b/templates/yann/maven/values.yml.example
@@ -73,7 +73,15 @@ GitRepoContainer:
     include: '^complete\/CI\/Docker\/.+'
 
 OCIBuild:
-  stepName: backapp_mvn_oci
+  stepName: build_backapp_mvn_oci
+  dockerFileName: Dockerfile
+  dockerFileLocation: complete/CI/Docker/
+  imageName: ninja-docker.artifactory-eu-yannc4-0.soleng-emea-staging.jfrog.team/backapp-mvn
+  pushImage: true
+  artifactoryTargetRepoName: ninja-dev-docker-local
+
+DockerBuild:
+  stepName: backapp_mvn_docker
   dockerFileName: Dockerfile
   dockerFileLocation: complete/CI/Docker/
   imageName: ninja-docker.artifactory-eu-yannc4-0.soleng-emea-staging.jfrog.team/backapp-mvn
