--- a/templates/yann/maven/values.yml.example
+++ b/templates/yann/maven/values.yml.example
@@ -14,7 +14,8 @@ ArtifactoryIntegration: artifactory_eu
 
 Pipeline:
   mvnNname: backapp_mvn
-  mvnContainerName: backapp_mvn_oci
+  mvnContainerName: backapp_mvn_docker
+  # mvnContainerName: backapp_mvn_oci
 
 ##########################################
 ## MVN Pipeline
@@ -56,10 +57,15 @@ BuildInfoMvnPromotion:
   copy: false
   mvnPromoteRepo: ninja-rc-mvn-local
 
+FileSpecMvn:
+  name: fs_backapp_mvn
+  appName: multi-module-application 
+  flat: true
+
 PropertyBagMvn: pb_backapp_mvn
 
 ##########################################
-## DOCKER PIPELINE
+## CONTAINER PIPELINE
 ##########################################
 
 GitRepoContainer:
@@ -72,13 +78,10 @@ GitRepoContainer:
   files:
     include: '^complete\/CI\/Docker\/.+'
 
-OCIBuild:
-  stepName: build_backapp_mvn_oci
-  dockerFileName: Dockerfile
-  dockerFileLocation: complete/CI/Docker/
-  imageName: ninja-docker.artifactory-eu-yannc4-0.soleng-emea-staging.jfrog.team/backapp-mvn
-  pushImage: true
-  artifactoryTargetRepoName: ninja-dev-docker-local
+PropertyBagContainer: pb_backapp_mvn_container
+
+
+## DOCKER PIPELINE
 
 DockerBuild:
   stepName: backapp_mvn_docker
@@ -88,24 +91,43 @@ DockerBuild:
   artifactoryTargetRepoName: ninja-dev-docker-local
 
 BuildInfoContainer:
-  resourceName: bi_backapp_mvn_oci
-  name: backapp_mvn_oci
+  resourceName: bi_backapp_mvn_docker
+  name: backapp_mvn_docker
 #  autoPublishBuildInfo: true
 
 BuildInfoContainerPromotion:
-  resourceName: bi_backapp_mvn_oci_promoted
-  stepName: promote_bi_backapp_mvn_oci
+  resourceName: bi_backapp_mvn_docker_promoted
+  stepName: promote_bi_backapp_mvn_docker
   includeDependencies: false
-  status: SANDBOX_OK
-  comment: passed my test succesfully
+  status: SCAN_OK
+  comment: Xray scan OK 
   copy: false
   mvnPromoteRepo: ninja-rc-docker-local
 
-FileSpecMvn:
-  name: fs_backapp_mvn
-  appName: multi-module-application 
-  flat: true
+XrayMvnContainerStepName: scan_backapp_mvn_docker
 
-PropertyBagContainer: pb_backapp_mvn_oci
+## OCI PIPELINE
 
-#XrayMvnContainerStepName: scan_backapp_mvn_docker
+# OCIBuild:
+#   stepName: backapp_mvn_oci
+#   dockerFileName: Dockerfile
+#   dockerFileLocation: complete/CI/Docker/
+#   imageName: ninja-docker.artifactory-eu-yannc4-0.soleng-emea-staging.jfrog.team/backapp-mvn
+#   pushImage: true
+#   artifactoryTargetRepoName: ninja-dev-docker-local
+
+# BuildInfoContainer:
+#   resourceName: bi_backapp_mvn_oci
+#   name: backapp_mvn_oci
+#   autoPublishBuildInfo: true
+
+# BuildInfoContainerPromotion:
+#   resourceName: bi_backapp_mvn_oci_promoted
+#   stepName: promote_bi_backapp_mvn_oci
+#   includeDependencies: false
+#   status: SANDBOX_OK
+#   comment: passed my test succesfully
+#   copy: false
+#   mvnPromoteRepo: ninja-rc-docker-local
+
+
