added resources for distribution

--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -69,6 +69,53 @@ resources:
     configuration:   
       appVersion: X.X.X
 
+###### DISTRIBUTION
+
+  - name: bi_mvn_debian
+    type: BuildInfo
+    configuration:
+      sourceArtifactory: artifactory_eu
+      buildName: webapp-debian
+      buildNumber: 1
+
+  - name: rb_mvn_debian
+    type: ReleaseBundle
+    configuration:
+      sourceDistribution: distribution_eu
+      name: java-webapp
+      version: "1"          # will be overriden by the CreateReleaseBundle step 
+      isSigned: true
+
+  - name: aql_distrib_debian
+    type: Aql
+    configuration:
+      sourceArtifactory: artifactory_eu
+      query: > 
+        items.find({
+        "$and": [
+        {"@app.version": "${runVarAppVersion}"},
+        {"@app.name": "ninja"}
+        ]})
+      addedProperties:
+        distribution: "automatic"
+      mappings:
+        - name: java
+          input: "ninja-rc-mvn-local/(.*)"
+          output: "ninja-mvn-release-local/$1"
+        - name: debian
+          input: "ninja-release-debian-local/pool/(.*)"
+          output: "ninja-debian-release-local/pool/$1"
+
+  - name: dr_mvn_debian 
+    type: DistributionRule
+    configuration:
+      sourceDistribution: distribution_eu
+      serviceName: "*"         
+      siteName: "*"
+      cityName: "New York City"
+      countryCodes:
+        - "US"
+
 pipelines:
   - name: {{ .Values.Pipeline.mvnNname }} 
     steps:
