fixed docker pipeline

--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -307,6 +307,8 @@ pipelines:
           status: {{ .Values.BuildInfoContainerPromotion.status }}
           comment: {{ .Values.BuildInfoContainerPromotion.comment }}
           copy: {{ .Values.BuildInfoContainerPromotion.copy }}
+          inputSteps:
+            - name: {{ .Values.XrayMvnContainerStepName }}
           inputResources:
             - name: {{ .Values.BuildInfoContainer.resourceName }}
           outputResources:
