--- a/templates/yann/maven/templateDefinition.yml
+++ b/templates/yann/maven/templateDefinition.yml
@@ -105,6 +105,9 @@ resources:
         - name: debian
           input: "ninja-release-debian-local/pool/(.*)"
           output: "ninja-debian-release-local/pool/$1"
+        - name: docker
+          input: "ninja-rc-docker-local/(.*)"
+          output: "ninja-release-docker-local/$1"
 
   - name: dr_mvn_debian 
     type: DistributionRule
